--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@alexzedim/blizzapi": "2.7.0",
+    "@aws-sdk/client-s3": "3.832.0",
     "@bull-board/express": "6.9.6",
     "@nestjs-modules/ioredis": "2.0.2",
     "@nestjs/axios": "4.0.0",
@@ -56,11 +57,10 @@
     "blizzapi": "2.6.5",
     "bull-board": "2.1.3",
     "bullmq": "5.53.0",
-    "change-case": "^5.4.4",
+    "change-case": "5.4.4",
     "cheerio": "1.0.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
-    "cloudflare-scraper": "^2.0.0",
     "eslint-config-prettier": "10.1.5",
     "eslint-plugin-prettier": "5.4.0",
     "express": "5.1.0",
@@ -74,12 +74,13 @@
     "mongoose": "8.15.1",
     "ms": "2.1.3",
     "nestjs-bull-board": "1.2.1",
+    "nestjs-s3": "2.0.1",
     "passport": "0.7.0",
     "passport-oauth2": "1.8.0",
-    "pg": "^8.16.0",
-    "playwright": "^1.53.1",
-    "playwright-extra": "^4.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "pg": "8.16.0",
+    "playwright": "1.53.1",
+    "playwright-extra": "4.3.6",
+    "puppeteer-extra-plugin-stealth": "2.11.2",
     "redis": "5.1.1",
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.2",
