refactor: clean up imports in `auctions.service` and `auctions.worker`, fix typo in Docker compose network comment

--- a/docker-compose.db.yml
+++ b/docker-compose.db.yml
@@ -29,7 +29,7 @@ services:
 
   # Docker Networks
 networks:
-  # All container connect in a network
+  # All containers connect in a network
   cmnw-network:
     driver: bridge
 
