--- a/docker-compose.db.yml
+++ b/docker-compose.db.yml
@@ -27,6 +27,18 @@ services:
     networks:
       - cmnw-network
 
+  bull-mq:
+    image: redis:7.4.3-alpine
+    restart: always
+    container_name: redis
+    command: redis-server --requirepass $REDIS_PASSWORD --appendonly yes
+    volumes:
+      - redis:/data:rw,z
+    ports:
+      - '6380:6379'
+    networks:
+      - cmnw-network
+
   # Docker Networks
 networks:
   # All containers connect in a network
