--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/conglomerat/test/jest-e2e.json",
     "docker:build": "docker build -f docker/local.Dockerfile -t cmnw:%npm_package_version% -t cmnw:latest .",
     "version": "echo %npm_package_version%"
   },
@@ -134,6 +133,10 @@
       "<rootDir>/apps/",
       "<rootDir>/libs/"
     ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!(change-case|.*\\.mjs$))"
+    ],
+    "setupFilesAfterEnv": ["<rootDir>/jest.setup.js"],
     "moduleNameMapper": {
       "@app/configuration": "<rootDir>/libs/configuration/src",
       "@app/configuration/(.*)": "<rootDir>/libs/configuration/src/$1",
