--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "nestjs-bull-board": "1.2.1",
     "nestjs-s3": "2.0.1",
     "passport": "0.7.0",
+    "passport-discord": "^0.1.4",
     "passport-oauth2": "1.8.0",
     "pg": "8.16.0",
     "playwright": "1.53.1",
@@ -136,7 +137,9 @@
     "transformIgnorePatterns": [
       "node_modules/(?!(change-case|.*\\.mjs$))"
     ],
-    "setupFilesAfterEnv": ["<rootDir>/jest.setup.js"],
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest.setup.js"
+    ],
     "moduleNameMapper": {
       "@app/configuration": "<rootDir>/libs/configuration/src",
       "@app/configuration/(.*)": "<rootDir>/libs/configuration/src/$1",
