--- a/apps/characters/Dockerfile
+++ b/apps/characters/Dockerfile
@@ -18,20 +18,23 @@ RUN git clone https://github.com/AlexZeDim/cmnw-secrets.git
 RUN mv cmnw-secrets/* .
 RUN rm -rf cmnw-secrets
 
-COPY package.json ./
+COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
 
 # Installing private github packages #
 RUN echo //npm.pkg.github.com/:_authToken=${CR_PAT} >> ~/.npmrc
 RUN echo @alexzedim:registry=https://npm.pkg.github.com/ >> ~/.npmrc
 
-RUN yarn install
+RUN corepack pnpm install --frozen-lockfile
 
 COPY . .
 
 RUN npm install -g @nestjs/cli
+RUN corepack enable
 RUN nest build characters
 
 CMD wait && ["node", "dist/apps/characters/main.js"]
+
+
 
 
 
