--- a/.github/workflows/job.docker-osint-image.yml
+++ b/.github/workflows/job.docker-osint-image.yml
@@ -39,11 +39,11 @@ jobs:
           registry-url: 'https://npm.pkg.github.com' # Specify the GitHub Packages registry URL
           scope: '@alexzedim' # Your npm scope
 
-      - name: Setup yarn
-        run: npm install -g yarn
+      - name: Enable corepack
+        run: corepack enable
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: corepack pnpm install --frozen-lockfile
         env:
           CR_PAT: ${{ secrets.CR_PAT }}
 
@@ -86,3 +86,5 @@ jobs:
       - name: Image digest
         run: |
           echo "Tag name ${{ steps.package-version.outputs.current-version}}"
+
+
