--- a/.gitignore
+++ b/.gitignore
@@ -16,14 +16,14 @@
 # Config
 /config
 /config/keys.json
-yarn.lock
+!pnpm-lock.yaml
 
 # Logs
 logs
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+pnpm-debug.log*
+pnpm-error.log*
 lerna-debug.log*
 
 # OS
@@ -53,3 +53,5 @@ lerna-debug.log*
 !/init-mongo.js
 !/package-lock.json
 !/files/
+!pnpm.ps1
+!pnpm.cmd
