--- a/apps/core/Dockerfile
+++ b/apps/core/Dockerfile
@@ -18,20 +18,22 @@ RUN git clone https://github.com/AlexZeDim/cmnw-secrets.git
 RUN mv cmnw-secrets/* .
 RUN rm -rf cmnw-secrets
 
-COPY package.json ./
+COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
 
 # Installing private github packages #
 RUN echo //npm.pkg.github.com/:_authToken=${CR_PAT} >> ~/.npmrc
 RUN echo @alexzedim:registry=https://npm.pkg.github.com/ >> ~/.npmrc
 
-RUN yarn install
+RUN npm install -g @nestjs/cli
+RUN corepack enable
+RUN corepack pnpm install --frozen-lockfile
 
 COPY . .
 
-RUN npm install -g @nestjs/cli
 RUN nest build keys
 
 CMD ["node", "dist/apps/keys/main.js"]
+
 
 
 
