--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
   "dependencies": {
     "@alexzedim/blizzapi": "2.7.0",
     "@aws-sdk/client-s3": "3.832.0",
-    "@bull-board/express": "6.9.6",
+    "@bull-board/api": "6.12.7",
+    "@bull-board/express": "6.12.7",
+    "@bull-board/nestjs": "6.12.7",
     "@nestjs-modules/ioredis": "2.0.2",
     "@nestjs/axios": "4.0.0",
     "@nestjs/bullmq": "11.0.2",
@@ -59,7 +61,6 @@
     "async-csv": "2.1.3",
     "axios": "1.9.0",
     "blizzapi": "2.6.5",
-    "bull-board": "2.1.3",
     "bullmq": "5.53.0",
     "change-case": "5.4.4",
     "cheerio": "1.0.0",
@@ -77,10 +78,9 @@
     "luxon": "3.6.1",
     "mongoose": "8.15.1",
     "ms": "2.1.3",
-    "nestjs-bull-board": "1.2.1",
     "nestjs-s3": "2.0.1",
     "passport": "0.7.0",
-    "passport-discord": "^0.1.4",
+    "passport-discord": "0.1.4",
     "passport-oauth2": "1.8.0",
     "pg": "8.16.0",
     "playwright": "1.53.1",
