--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cmnw",
-  "version": "6.6.3",
+  "version": "6.6.5",
   "homepage": "https://cmnw.me",
   "description": "Intelligence always wins",
   "private": true,
@@ -54,9 +54,9 @@
     "@nestjs/platform-express": "11.1.2",
     "@nestjs/schedule": "6.0.0",
     "@nestjs/swagger": "11.2.0",
+    "@nestjs/terminus": "11.0.0",
     "@nestjs/typeorm": "11.0.0",
     "@types/async-csv": "2.1.4",
-    "@types/cheerio": "1.0.0",
     "@types/fs-extra": "11.0.4",
     "async-csv": "2.1.3",
     "axios": "1.9.0",
@@ -89,7 +89,7 @@
     "redis": "5.1.1",
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.2",
-    "typeorm": "0.3.24",
+    "typeorm": "0.3.26",
     "typeorm-naming-strategies": "4.1.0"
   },
   "devDependencies": {
@@ -110,7 +110,7 @@
     "jest": "29.7.0",
     "prettier": "3.5.3",
     "run-script-webpack-plugin": "0.2.3",
-    "supertest": "7.1.1",
+    "supertest": "7.1.4",
     "ts-jest": "29.3.4",
     "ts-loader": "9.5.2",
     "ts-node": "10.9.2",
@@ -118,6 +118,12 @@
     "typescript": "5.8.3",
     "webpack": "5.99.9",
     "webpack-node-externals": "3.0.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "@nestjs/terminus": "11.0.0",
+      "reflect-metadata": "0.2.2"
+    }
   },
   "jest": {
     "moduleFileExtensions": [
@@ -141,9 +147,6 @@
     ],
     "transformIgnorePatterns": [
       "node_modules/(?!(change-case|.*\\.mjs$))"
-    ],
-    "setupFilesAfterEnv": [
-      "<rootDir>/jest.setup.js"
     ],
     "moduleNameMapper": {
       "@app/configuration": "<rootDir>/libs/configuration/src",
