--- a/.github/workflows/job.docker-dma-image.yml
+++ b/.github/workflows/job.docker-dma-image.yml
@@ -43,7 +43,7 @@ jobs:
         run: corepack enable
 
       - name: Install dependencies
-        run: corepack pnpm install --frozen-lockfile
+        run: corepack pnpm install
         env:
           CR_PAT: ${{ secrets.CR_PAT }}
 
