--- a/apps/warcraft-logs/Dockerfile
+++ b/apps/warcraft-logs/Dockerfile
@@ -24,7 +24,7 @@ COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
 RUN echo //npm.pkg.github.com/:_authToken=${CR_PAT} >> ~/.npmrc
 RUN echo @alexzedim:registry=https://npm.pkg.github.com/ >> ~/.npmrc
 
-RUN corepack pnpm install --frozen-lockfile
+RUN corepack pnpm install
 
 COPY . .
 
