--- a/docker-compose.core.yml
+++ b/docker-compose.core.yml
@@ -7,3 +7,10 @@ services:
     command: [ 'node', 'dist/apps/core/main.js' ]
     env_file:
       - stack.env
+    networks:
+      - cmnw-network
+
+networks:
+  cmnw-network:
+    external: true
+    name: cmnw-db_cmnw-network
