--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "cheerio": "1.0.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
+    "dotenv": "^17.2.2",
     "eslint-config-prettier": "10.1.5",
     "eslint-plugin-prettier": "5.4.0",
     "express": "5.1.0",
