--- a/.github/ci-cd/job.docker-keys-image.yml
+++ b/.github/ci-cd/job.docker-keys-image.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Tag new release
         uses: butlerlogic/action-autotag@stable
         env:
-          GITHUB_TOKEN: ${{ secrets.CR_PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Docker meta
         id: meta
@@ -43,7 +43,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.CR_PAT }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build & Push (GHCR)
         uses: docker/build-push-action@v4.1.1
@@ -54,7 +54,6 @@ jobs:
           tags: ghcr.io/alexzedim/keys:latest
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
-            CR_PAT=${{ secrets.CR_PAT }}
 
       - name: Image digest
         run: echo ${{ steps.build-push-action.outputs.digest }}
