--- a/.github/workflows/job.docker-dma-image.yml
+++ b/.github/workflows/job.docker-dma-image.yml
@@ -45,7 +45,6 @@ jobs:
       - name: Install dependencies
         run: corepack pnpm install
         env:
-          CR_PAT: ${{ secrets.CR_PAT }}
 
       - name: Docker meta
         id: meta
@@ -69,7 +68,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.CR_PAT }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build & Push (GHCR)
         id: build-push-action
@@ -81,7 +80,6 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
-            CR_PAT=${{ secrets.CR_PAT }}
 
       - name: Image digest
         run: |
