--- a/.github/ci-cd/job.docker-gold-image.yml
+++ b/.github/ci-cd/job.docker-gold-image.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Tag new release
         uses: butlerlogic/action-autotag@stable
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CR_PAT: ${{ secrets.CR_PAT }}
 
       - name: Docker meta
         id: meta
@@ -45,7 +45,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.CR_PAT }}
 
       - name: Build & Push (GHCR)
         uses: docker/build-push-action@v4.1.1
