--- a/.github/workflows/job.docker-dma-image.yml
+++ b/.github/workflows/job.docker-dma-image.yml
@@ -67,7 +67,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.CR_PAT }}
 
       - name: Build & Push (GHCR)
         id: build-push-action
