--- a/.github/workflows/job.docker-warcraft-logs-image.yml
+++ b/.github/workflows/job.docker-warcraft-logs-image.yml
@@ -61,7 +61,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.CR_PAT }}
 
       - name: Build & Push (GHCR)
         id: build-push-action
