--- a/.github/workflows/job.docker-osint-image.yml
+++ b/.github/workflows/job.docker-osint-image.yml
@@ -44,6 +44,8 @@ jobs:
 
       - name: Install dependencies
         run: corepack pnpm install
+        env:
+          CR_PAT: ${{ secrets.CR_PAT }}
 
       - name: Docker meta
         id: meta
