Enables access to private GitHub packages
Configures Dockerfiles to authenticate with the GitHub Package Registry using a personal access token. This allows the Docker builds to access and install private packages. The token is passed as a build argument.

--- a/.github/workflows/job.docker-dma-image.yml
+++ b/.github/workflows/job.docker-dma-image.yml
@@ -81,6 +81,7 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
+            CR_PAT=${{ secrets.CR_PAT }}
 
       - name: Image digest
         run: |
