--- a/.github/workflows/job.docker-dma-image.yml
+++ b/.github/workflows/job.docker-dma-image.yml
@@ -76,7 +76,7 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
-            NODE_AUTH_TOKEN=${{ env.NODE_AUTH_TOKEN }}
+            NODE_AUTH_TOKEN=${{ secrets.GITHUB_TOKEN }}
 
       - name: Image digest
         run: |
