fix: add GitHub Packages authentication to core and osint workflows
- Update core and osint Dockerfiles to support NODE_AUTH_TOKEN
- Add build-args to pass GITHUB_TOKEN to Docker builds
- Configure npm registry authentication for scoped packages
- Consistent with DMA workflow authentication fix

--- a/.github/workflows/job.docker-core-image.yml
+++ b/.github/workflows/job.docker-core-image.yml
@@ -74,6 +74,8 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            NODE_AUTH_TOKEN=${{ secrets.GITHUB_TOKEN }}
 
       - name: Image digest
         run: |
