--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@nestjs/typeorm": "11.0.0",
     "@types/async-csv": "2.1.4",
     "@types/fs-extra": "11.0.4",
+    "@willsoto/nestjs-prometheus": "^6.0.2",
     "async-csv": "2.1.3",
     "axios": "1.9.0",
     "bullmq": "5.53.0",
@@ -85,6 +86,7 @@
     "pg": "8.16.0",
     "playwright": "1.53.1",
     "playwright-extra": "4.3.6",
+    "prom-client": "^15.1.3",
     "puppeteer-extra-plugin-stealth": "2.11.2",
     "redis": "5.1.1",
     "reflect-metadata": "0.2.2",
