--- a/docker-compose.core.yml
+++ b/docker-compose.core.yml
@@ -7,6 +7,8 @@ services:
     command: [ 'node', 'dist/apps/core/main.js' ]
     env_file:
       - stack.env
+    networks:
+      - default
 
   api:
     container_name: cmnw-api
@@ -14,6 +16,13 @@ services:
     restart: always
     command: [ 'node', 'dist/apps/api/main.js' ]
     ports:
-      - '3000:3000'
+      - '8080:3000'
     env_file:
       - stack.env
+    networks:
+      - default
+
+networks:
+  default:
+    name: cmnw_default
+    driver: bridge
