--- a/package.json
+++ b/package.json
@@ -40,85 +40,85 @@
   },
   "dependencies": {
     "@alexzedim/blizzapi": "2.7.0",
-    "@aws-sdk/client-s3": "3.832.0",
-    "@bull-board/api": "6.12.7",
-    "@bull-board/express": "6.12.7",
-    "@bull-board/nestjs": "6.12.7",
+    "@aws-sdk/client-s3": "3.916.0",
+    "@bull-board/api": "6.14.0",
+    "@bull-board/express": "6.14.0",
+    "@bull-board/nestjs": "6.14.0",
     "@nestjs-modules/ioredis": "2.0.2",
-    "@nestjs/axios": "4.0.0",
-    "@nestjs/bullmq": "11.0.2",
-    "@nestjs/common": "11.1.2",
-    "@nestjs/core": "11.1.2",
+    "@nestjs/axios": "4.0.1",
+    "@nestjs/bullmq": "11.0.4",
+    "@nestjs/common": "11.1.7",
+    "@nestjs/core": "11.1.7",
     "@nestjs/mongoose": "11.0.3",
     "@nestjs/passport": "11.0.5",
-    "@nestjs/platform-express": "11.1.2",
-    "@nestjs/schedule": "6.0.0",
-    "@nestjs/swagger": "11.2.0",
+    "@nestjs/platform-express": "11.1.7",
+    "@nestjs/schedule": "6.0.1",
+    "@nestjs/swagger": "11.2.1",
     "@nestjs/terminus": "11.0.0",
     "@nestjs/typeorm": "11.0.0",
     "@types/async-csv": "2.1.4",
     "@types/fs-extra": "11.0.4",
     "@willsoto/nestjs-prometheus": "^6.0.2",
     "async-csv": "2.1.3",
-    "axios": "1.9.0",
-    "bullmq": "5.53.0",
+    "axios": "1.12.2",
+    "bullmq": "5.61.2",
     "change-case": "5.4.4",
-    "cheerio": "1.0.0",
+    "cheerio": "1.1.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
-    "dotenv": "^17.2.2",
-    "eslint-config-prettier": "10.1.5",
-    "eslint-plugin-prettier": "5.4.0",
+    "dotenv": "^17.2.3",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-prettier": "5.5.4",
     "express": "5.1.0",
-    "farmhash": "4.0.1",
-    "fs-extra": "11.3.0",
+    "farmhash": "5.0.1",
+    "fs-extra": "11.3.2",
     "http-proxy-agent": "7.0.2",
     "https-proxy-agent": "7.0.6",
-    "ioredis": "5.6.1",
+    "ioredis": "5.8.2",
     "lodash": "4.17.21",
-    "luxon": "3.6.1",
-    "mongoose": "8.15.1",
+    "luxon": "3.7.2",
+    "mongoose": "8.19.2",
     "ms": "2.1.3",
-    "nestjs-s3": "2.0.1",
+    "nestjs-s3": "3.0.1",
     "passport": "0.7.0",
     "passport-discord": "0.1.4",
     "passport-oauth2": "1.8.0",
-    "pg": "8.16.0",
-    "playwright": "1.53.1",
+    "pg": "8.16.3",
+    "playwright": "1.56.1",
     "playwright-extra": "4.3.6",
     "prom-client": "^15.1.3",
     "puppeteer-extra-plugin-stealth": "2.11.2",
-    "redis": "5.1.1",
+    "redis": "5.9.0",
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.2",
-    "typeorm": "0.3.26",
+    "typeorm": "0.3.27",
     "typeorm-naming-strategies": "4.1.0"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "7.27.1",
-    "@jest/globals": "30.0.0-beta.3",
-    "@nestjs/cli": "11.0.7",
-    "@nestjs/testing": "11.1.2",
+    "@babel/preset-typescript": "7.28.5",
+    "@jest/globals": "30.2.0",
+    "@nestjs/cli": "11.0.10",
+    "@nestjs/testing": "11.1.7",
     "@types/config": "3.3.5",
-    "@types/express": "5.0.2",
-    "@types/jest": "29.5.14",
-    "@types/lodash": "4.17.17",
+    "@types/express": "5.0.4",
+    "@types/jest": "30.0.0",
+    "@types/lodash": "4.17.20",
     "@types/ms": "2.1.0",
-    "@types/node": "22.15.24",
+    "@types/node": "24.9.1",
     "@types/supertest": "6.0.3",
-    "@typescript-eslint/eslint-plugin": "8.33.0",
-    "@typescript-eslint/parser": "8.33.0",
-    "eslint": "9.27.0",
-    "jest": "29.7.0",
-    "prettier": "3.5.3",
+    "@typescript-eslint/eslint-plugin": "8.46.2",
+    "@typescript-eslint/parser": "8.46.2",
+    "eslint": "9.38.0",
+    "jest": "30.2.0",
+    "prettier": "3.6.2",
     "run-script-webpack-plugin": "0.2.3",
     "supertest": "7.1.4",
-    "ts-jest": "29.3.4",
-    "ts-loader": "9.5.2",
+    "ts-jest": "29.4.5",
+    "ts-loader": "9.5.4",
     "ts-node": "10.9.2",
     "tsconfig-paths": "4.2.0",
-    "typescript": "5.8.3",
-    "webpack": "5.99.9",
+    "typescript": "5.9.3",
+    "webpack": "5.102.1",
     "webpack-node-externals": "3.0.0"
   },
   "pnpm": {
