feat: add dynamic worker concurrency management via API
- Add environment-based concurrency control for all queue workers
- Create Workers API controller for managing concurrency and replicas
- Extract queue metrics providers to separate file
- Add worker types to libs/resources
- Update docker-compose files with dynamic environment variables
- Add stack.env with default worker configuration

BREAKING CHANGE: Workers now require environment variables for concurrency

--- a/docker-compose.dma.yml
+++ b/docker-compose.dma.yml
@@ -6,7 +6,9 @@ services:
     command: [ 'node', '--max-old-space-size=4096', 'dist/apps/dma/main.js' ]
     deploy:
       mode: replicated
-      replicas: 2
+      replicas: ${DMA_REPLICAS:-2}
+    environment:
+      - AUCTIONS_WORKER_CONCURRENCY=${AUCTIONS_WORKER_CONCURRENCY:-1}
     env_file:
       - stack.env
 
@@ -21,5 +23,7 @@ services:
     image: ghcr.io/alexzedim/dma:latest
     restart: always
     command: [ 'node', 'dist/apps/items/main.js' ]
+    environment:
+      - ITEMS_WORKER_CONCURRENCY=${ITEMS_WORKER_CONCURRENCY:-3}
     env_file:
       - stack.env
