refactor(osint): extract character worker logic into dedicated services
- Extract API calls into CharacterService
- Extract entity indexing into CharacterEntityIndexingService
- Extract lifecycle operations into CharacterLifecycleService
- Extract collection sync into CharacterCollectionService
- Update services/index.ts to export all services
- Update imports to use barrel exports in workers and module
- Fix missing @InjectRepository decorators in guild services
- Apply isCondition naming pattern for complex boolean logic
- Reduce CharactersWorker from 809 to 237 lines

--- a/package.json
+++ b/package.json
@@ -149,12 +149,13 @@
     ],
     "coverageDirectory": "./coverage",
     "testEnvironment": "node",
+    "setupFilesAfterEnv": ["<rootDir>/jest.setup.ts"],
     "roots": [
       "<rootDir>/apps/",
       "<rootDir>/libs/"
     ],
     "transformIgnorePatterns": [
-      "node_modules/(?!(change-case|.*\\.mjs$))"
+      "node_modules/(?!((change-case|lower-case|no-case|upper-case|capital-case|constant-case|dot-case|header-case|param-case|pascal-case|path-case|sentence-case|snake-case|title-case)|.*\\.mjs$))"
     ],
     "moduleNameMapper": {
       "@app/configuration": "<rootDir>/libs/configuration/src",
