--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "async-csv": "2.1.3",
     "axios": "1.12.2",
     "bullmq": "5.61.2",
+    "chalk": "^5.6.2",
     "change-case": "5.4.4",
     "cheerio": "1.1.2",
     "class-transformer": "0.5.1",
@@ -149,7 +150,9 @@
     ],
     "coverageDirectory": "./coverage",
     "testEnvironment": "node",
-    "setupFilesAfterEnv": ["<rootDir>/jest.setup.ts"],
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest.setup.ts"
+    ],
     "roots": [
       "<rootDir>/apps/",
       "<rootDir>/libs/"
