--- a/.github/workflows/job.docker-core-image.yml
+++ b/.github/workflows/job.docker-core-image.yml
@@ -6,8 +6,8 @@ on:
       - 'v*' # Trigger for tags starting with 'v' (e.g., v1.0, v2.3.1)
       - '!v*-beta' # Exclude beta tags
     paths:
-      - 'apps/keys/**'
-      - 'apps/realms/**'
+      - 'apps/api/**'
+      - 'apps/core/**'
       - 'libs/**'
       - 'docker/arm64.core.Dockerfile'
       - 'docker/x64.core.Dockerfile'
