build: Docker cache backend - use registry cache instead of gha for self-hosted runners

--- a/.github/workflows/job.docker-dma-image.yml
+++ b/.github/workflows/job.docker-dma-image.yml
@@ -76,8 +76,8 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: type=registry,ref=ghcr.io/alexzedim/dma:buildcache
+          cache-to: type=registry,ref=ghcr.io/alexzedim/dma:buildcache,mode=max
 
       - name: Image digest
         run: |
