--- a/.github/workflows/job.docker-core-image.yml
+++ b/.github/workflows/job.docker-core-image.yml
@@ -75,8 +75,8 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: type=registry,ref=ghcr.io/alexzedim/core:buildcache
+          cache-to: type=registry,ref=ghcr.io/alexzedim/core:buildcache,mode=max
 
       - name: Image digest
         run: |
