--- a/package.json
+++ b/package.json
@@ -45,11 +45,10 @@
     "@bull-board/api": "6.15.0",
     "@bull-board/express": "6.15.0",
     "@bull-board/nestjs": "6.15.0",
+    "@golevelup/nestjs-rabbitmq": "7.1.1",
     "@nestjs-modules/ioredis": "2.0.2",
     "@nestjs/axios": "4.0.1",
     "@nestjs/bullmq": "11.0.4",
-    "@golevelup/nestjs-rabbitmq": "7.1.1",
-    "amqplib": "0.10.9",
     "@nestjs/common": "11.1.9",
     "@nestjs/core": "11.1.9",
     "@nestjs/mongoose": "11.0.4",
@@ -62,6 +61,7 @@
     "@types/async-csv": "2.1.4",
     "@types/fs-extra": "11.0.4",
     "@willsoto/nestjs-prometheus": "^6.0.2",
+    "amqplib": "0.10.9",
     "async-csv": "2.1.3",
     "axios": "1.13.2",
     "bullmq": "5.66.0",
@@ -96,13 +96,15 @@
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.2",
     "typeorm": "0.3.28",
-    "typeorm-naming-strategies": "4.1.0"
+    "typeorm-naming-strategies": "4.1.0",
+    "uuid": "13.0.0"
   },
   "devDependencies": {
     "@babel/preset-typescript": "7.28.5",
     "@jest/globals": "30.2.0",
     "@nestjs/cli": "11.0.14",
     "@nestjs/testing": "11.1.9",
+    "@types/amqplib": "0.10.8",
     "@types/config": "3.3.5",
     "@types/express": "5.0.6",
     "@types/jest": "30.0.0",
@@ -124,8 +126,7 @@
     "tsconfig-paths": "4.2.0",
     "typescript": "5.9.3",
     "webpack": "5.103.0",
-    "webpack-node-externals": "3.0.0",
-    "@types/amqplib": "^0.10.5"
+    "webpack-node-externals": "3.0.0"
   },
   "pnpm": {
     "overrides": {
