--- a/package.json
+++ b/package.json
@@ -60,17 +60,17 @@
     "@nestjs/typeorm": "11.0.0",
     "@types/async-csv": "2.1.4",
     "@types/fs-extra": "11.0.4",
-    "@willsoto/nestjs-prometheus": "^6.0.2",
+    "@willsoto/nestjs-prometheus": "6.0.2",
     "amqplib": "0.10.9",
     "async-csv": "2.1.3",
     "axios": "1.13.2",
     "bullmq": "5.66.0",
-    "chalk": "^5.6.2",
+    "chalk": "5.6.2",
     "change-case": "5.4.4",
     "cheerio": "1.1.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.3",
-    "dotenv": "^17.2.3",
+    "dotenv": "17.2.3",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-prettier": "5.5.4",
     "express": "5.2.1",
@@ -118,6 +118,7 @@
     "eslint-plugin-unused-imports": "4.1.4",
     "jest": "30.2.0",
     "prettier": "3.7.4",
+    "rimraf": "^6.1.2",
     "run-script-webpack-plugin": "0.2.3",
     "supertest": "7.1.4",
     "ts-jest": "29.4.6",
