--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,9 +1,21 @@
 FROM node:22.15
 
-LABEL org.opencontainers.image.title = "CMNW"
-LABEL org.opencontainers.image.vendor = "cmnw"
-LABEL org.opencontainers.image.url = "https://raw.githubusercontent.com/alexzedim/cmnw-next/master/public/static/cmnw.png"
-LABEL org.opencontainers.image.source = "https://github.com/alexzedim/cmnw"
+ARG OCI_CREATED
+ARG OCI_REVISION
+ARG OCI_VERSION
+
+LABEL org.opencontainers.image.title="CMNW" \
+    org.opencontainers.image.description="Intelligence always wins" \
+    org.opencontainers.image.vendor="alexzedim" \
+    org.opencontainers.image.url="https://cmnw.me" \
+    org.opencontainers.image.source="https://github.com/alexzedim/cmnw" \
+    org.opencontainers.image.documentation="https://github.com/alexzedim/cmnw#readme" \
+    org.opencontainers.image.licenses="MPL-2.0" \
+    org.opencontainers.image.logo="https://raw.githubusercontent.com/alexzedim/cmnw-next/master/public/static/cmnw.png" \
+    org.opencontainers.image.base.name="node:22.15" \
+    org.opencontainers.image.created="${OCI_CREATED}" \
+    org.opencontainers.image.revision="${OCI_REVISION}" \
+    org.opencontainers.image.version="${OCI_VERSION}"
 
 RUN apt-get update
 
