--- a/.github/workflows/job.docker-core-image.yml
+++ b/.github/workflows/job.docker-core-image.yml
@@ -31,6 +31,12 @@ jobs:
         id: get_tag
         run: echo "TAG_NAME=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
 
+      - name: Set OCI build args
+        run: |
+          echo "OCI_CREATED=$(date -u +'%Y-%m-%dT%H:%M:%SZ')" >> $GITHUB_ENV
+          echo "OCI_REVISION=${GITHUB_SHA}" >> $GITHUB_ENV
+          echo "OCI_VERSION=${TAG_NAME}" >> $GITHUB_ENV
+
       - name: Use Node.js 20.x
         uses: actions/setup-node@v4
         with:
@@ -50,14 +56,17 @@ jobs:
             type=raw,value=latest
           labels: |
             maintainer=alexzedim
-            org.opencontainers.image.title=CORE
-            org.opencontainers.image.licenses=MPL-2.0
-            org.opencontainers.image.vendor=cmnw
-            org.opencontainers.image.url=https://raw.githubusercontent.com/alexzedim/cmnw-next/master/public/static/cmnw.png
+            org.opencontainers.image.title=CMNW Core
+            org.opencontainers.image.description=CORE - Intelligence always wins
+            org.opencontainers.image.vendor=alexzedim
+            org.opencontainers.image.url=https://cmnw.me
             org.opencontainers.image.source=https://github.com/alexzedim/cmnw
-            org.opencontainers.image.documentation=https://github.com/alexzedim/cmnw/blob/master/README.md
-            org.opencontainers.image.description=Intelligence-always-wins
-            org.opencontainers.image.revision=${{ github.sha }}
+            org.opencontainers.image.documentation=https://github.com/alexzedim/cmnw#readme
+            org.opencontainers.image.licenses=MPL-2.0
+            org.opencontainers.image.logo=https://raw.githubusercontent.com/alexzedim/cmnw-next/master/public/static/cmnw.png
+            org.opencontainers.image.created=${{ env.OCI_CREATED }}
+            org.opencontainers.image.revision=${{ env.OCI_REVISION }}
+            org.opencontainers.image.version=${{ env.OCI_VERSION }}
 
       - name: Login to Github Packages
         uses: docker/login-action@v2.1.0
@@ -75,6 +84,10 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            OCI_CREATED=${{ env.OCI_CREATED }}
+            OCI_REVISION=${{ env.OCI_REVISION }}
+            OCI_VERSION=${{ env.OCI_VERSION }}
 
       - name: Image digest
         run: |
