--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "https://github.com/alexzedim/cmnw.git"
   },
   "languageName": "node",
-  "packageManager": "pnpm@10.28.1+sha512.7d7dbbca9e99447b7c3bf7a73286afaaf6be99251eb9498baefa7d406892f67b879adb3a1d7e687fc4ccc1a388c7175fbaae567a26ab44d1067b54fcb0d6a316",
+  "packageManager": "pnpm@10.28.2",
   "engines": {
     "node": ">=24.0.0",
     "pnpm": ">=10.0.0"
@@ -79,6 +79,7 @@
     "http-proxy-agent": "7.0.2",
     "https-proxy-agent": "7.0.6",
     "ioredis": "5.8.2",
+    "kebab-case": "2.0.2",
     "lodash": "4.17.21",
     "luxon": "3.7.2",
     "mongoose": "9.0.1",
