refactor: update auction message dto and auctions worker with adaptive rate limiting

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -120,6 +120,16 @@
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
       "skipFiles": ["<node_internals>/**"]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "build:all",
+      "runtimeExecutable": "pnpm",
+      "runtimeArgs": ["build:all"],
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen",
+      "skipFiles": ["<node_internals>/**"]
     }
   ],
   "compounds": [
