feat: implement bullMQ

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,7 @@
     "experimentalDecorators": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "lib": [
-      "ES2020"
-    ],
+    "lib": ["ES2020"],
     "target": "es2020",
     "skipLibCheck": true,
     "sourceMap": true,
@@ -17,48 +15,18 @@
     "baseUrl": "./",
     "incremental": true,
     "paths": {
-      "@app/configuration": [
-        "libs/configuration/src"
-      ],
-      "@app/configuration/*": [
-        "libs/configuration/src/*"
-      ],
-      "@app/logger": [
-        "libs/logger/src"
-      ],
-      "@app/logger/*": [
-        "libs/logger/src/*"
-      ],
-      "@app/mongo": [
-        "libs/mongo/src"
-      ],
-      "@app/mongo/*": [
-        "libs/mongo/src/*"
-      ],
-      "@app/pg": [
-        "libs/pg/src"
-      ],
-      "@app/pg/*": [
-        "libs/pg/src/*"
-      ],
-      "@app/resources": [
-        "libs/resources/src"
-      ],
-      "@app/resources/*": [
-        "libs/resources/src/*"
-      ],
-      "@app/s3": [
-        "libs/s3/src"
-      ],
-      "@app/s3/*": [
-        "libs/s3/src/*"
-      ],
-      "@app/rabbitmq": [
-        "libs/rabbitmq/src"
-      ],
-      "@app/rabbitmq/*": [
-        "libs/rabbitmq/src/*"
-      ]
+      "@app/configuration": ["libs/configuration/src"],
+      "@app/configuration/*": ["libs/configuration/src/*"],
+      "@app/logger": ["libs/logger/src"],
+      "@app/logger/*": ["libs/logger/src/*"],
+      "@app/mongo": ["libs/mongo/src"],
+      "@app/mongo/*": ["libs/mongo/src/*"],
+      "@app/pg": ["libs/pg/src"],
+      "@app/pg/*": ["libs/pg/src/*"],
+      "@app/resources": ["libs/resources/src"],
+      "@app/resources/*": ["libs/resources/src/*"],
+      "@app/s3": ["libs/s3/src"],
+      "@app/s3/*": ["libs/s3/src/*"]
     }
   }
 }
